# Learning-GIT

./: .gitignore  CMakeLists.txt  README.md  Reelocator.cpp  ReelocatorCore.cpp  ReelocatorCore.hpp  factorial_calculator.py  magic8.py  script.py  shipping.py  space.py  test.txt  zyn_tracker.py
.github/workflows/: cpp-ci.yml
Testing/: generate_junit_report.py  index.css  report.js  report_template.html.j2
docs/: github-actions-cpp-guide.md
excursion/: index.html
excursion/resources/css/: style.css
testing/: generate_test_report.py
tests/: ReelocatorCoreTests.cpp
